Add Deposit entity
